overflow firefox fix

--- a/public/min.css
+++ b/public/min.css
@@ -17,7 +17,6 @@ body, html {
 @media screen and (max-width: 600px) {
   body, html {
     max-width: 350px;
-    max-height: 600px;
   }
 }
 
